// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HandTileHolder /> renders correctly for current player's tile 1`] = `
<div
  className="tileHolder"
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <div
    className="tileContainer"
    draggable={true}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  >
    <div
      className="tile"
    >
      <span
        className="points"
      >
        2
      </span>
      <span
        className="letter"
      >
        L
      </span>
    </div>
  </div>
</div>
`;

exports[`<HandTileHolder /> renders correctly for other player's tile 1`] = `
<div
  className="tileHolder"
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <div
    className="tileContainer"
    draggable={false}
    onDragEnd={[Function]}
    onDragStart={[Function]}
  >
    <div
      className="tile"
    >
      <span
        className="points"
      >
        5
      </span>
      <span
        className="letter"
      >
        K
      </span>
    </div>
  </div>
</div>
`;
